--- a/src/assets/style/antdStyle.scss
+++ b/src/assets/style/antdStyle.scss
@@ -50,11 +50,11 @@
          color: #ccc;
 
          &:hover {
-             color: #fff;
+             color: #5EFF1E;
              background: #004A3C;
 
              .ant-menu-title-content {
-                 color: #fff;
+                 color: #5EFF1E;
              }
          }
      }
@@ -84,7 +84,7 @@
              }
 
              &:hover {
-                 color: #fff;
+                 color: #5EFF1E;
                  background-color: rgba(0, 255, 255, 0.2) !important;
 
                  .ant-menu-title-content {
@@ -105,11 +105,11 @@
              color: #ccc;
 
              &:hover {
-                 color: #fff;
+                color: #5EFF1E;
                  background: #004A3C;
 
                  .ant-menu-title-content {
-                     color: #fff;
+                     color: #47c515;
                  }
              }
          }
